crates/retiretui/src/commands/tui/snapshots/retiretui__commands__tui__frames__household_128x32.snap
---
source: crates/retiretui/src/commands/tui/frames.rs
assertion_line: 26
expression: composed_frame(app)
---
╭──────────╮╭────────╮╭─────────╮╭───────╮╭──────╮                                                                              
│1 Overview││2 Ledger││3 Compare││4 Tools││5 Plan│                                                                  full.toml ● 
┴──────────┴┴────────┴┴─────────┴┴───────┴╯      ╰──────────────────────────────────────────────────────────────────────────────
╭ Plan ─────────────╮╭ Household ──────────────────────────────────────────────────────────────────────────────────────────────╮
│  Accounts       7 ││                                                                                                         │
│  Income         4 ││▌ Filing status        Married filing jointly                                                            │
│  Expenses       2 ││  Medicare surcharges                                                                                    │
│  Cliffs         0 ││                                                                                                         │
│  Transfers      1 ││                                                                                                         │
│  Conversions    1 ││                                                                                                         │
│  Contributions  3 ││                                                                                                         │
│  Events         1 ││                                                                                                         │
│  People         2 ││                                                                                                         │
│  Residency      1 ││                                                                                                         │
│▏ Household        ││                                                                                                         │
│  Settings         ││                                                                                                         │
│  Market           ││                                                                                                         │
│                   ││                                                                                                         │
│                   ││                                                                                                         │
│                   ││                                                                                                         │
│                   ││                                                                                                         │
│                   ││                                                                                                         │
│                   ││                                                                                                         │
│                   ││                                                                                                         │
│                   ││                                                                                                         │
│                   ││                                                                                                         │
│                   ││                                                                                                         │
│                   ││                                                                                                         │
│                   ││                                                                                                         │
│                   ││                                                                                                         │
╰───────────────────╯╰─────────────────────────────────────────────────────────────────────────────────────────────────────────╯
 ⏎ edit  esc domains  ⇥ pane  ctrl-s save  r reload  q quit  ctrl-↓ tab  n toggle dollars                    : commands  ? help
